--- a/index.html
+++ b/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="sr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sanela Jovanović | Lean Life Coach</title>
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sanela Jovanović - Lean Life Coach</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- ===== HEADER ===== -->
+  <!-- Navigacija -->
   <header>
-    <div class="logo">Sanela Jovanović
-      <span>Lean Life Coach</span>
-    </div>
-    <nav>
-      <ul>
+    <nav class="navbar">
+      <h1 class="logo">Sanela Jovanović</h1>
+      <ul class="nav-links">
         <li><a href="index.html">POČETNA</a></li>
         <li><a href="o-meni.html">O MENI</a></li>
         <li><a href="usluge.html">USLUGE</a></li>
@@ -26,64 +23,49 @@
     </nav>
   </header>
 
-  <!-- ===== HERO SEKCIJA ===== -->
+  <!-- Hero sekcija -->
   <section class="hero">
-    <div class="hero-text">
-      <h1>Dobrodošli!</h1>
-      <p>Uz stručnu podršku i coaching pristup, zajedno stvaramo balans između ličnog i profesionalnog rasta. Tvoj put ka ispunjenju počinje ovde.</p>
-      <a href="kontakt.html" class="dugme">Prijavi se</a>
-    </div>
-    <div class="hero-image">
-      <img src="moja-slika.jpg" alt="Sanela Jovanović" width="300" style="border-radius:10px;">
-    </div>
-  </section>
-
-  <!-- ===== SEKCIJA USLUGE ===== -->
-  <section>
-    <h2>Programi i Usluge</h2>
-    <div class="program">
-      <p>Lean Life Coaching, Individualni coaching, Lični rast i razvoj, Odnosi i komunikacija, Postizanje ciljeva i finansijska stabilnost.</p>
-      <a href="usluge.html" class="dugme">Saznaj više</a>
+    <div class="hero-content">
+      <img src="images/sanela.jpg" alt="Sanela Jovanović" class="hero-image">
+      <div class="hero-text">
+        <h1 class="signature">Sanela Jovanović</h1>
+        <h2 class="subtext">LEAN LIFE COACH</h2>
+        <p class="welcome-text">Dobrodošli! Pomažem vam da unapredite svoj lični i profesionalni život kroz podršku, motivaciju i jasan plan ka vašim ciljevima.</p>
+        <a href="kontakt.html" class="cta-button">PRIJAVI SE</a>
+      </div>
     </div>
   </section>
 
-  <!-- ===== BLOG SEKCIJA ===== -->
-  <section>
-    <h2>Blog</h2>
-    <p>Inspirativni tekstovi, saveti i alati koji pomažu da unaprediš svoj život i karijeru.</p>
-    <a href="blog.html" class="dugme">Pročitaj više</a>
-  </section>
-
-  <!-- ===== BESPLATNI SADRŽAJ ===== -->
-  <section>
-    <h2>Besplatni Materijali</h2>
-    <p>Preuzmi korisne vodiče, vežbe i mini programe koji te vode ka ličnom rastu.</p>
-    <a href="besplatno.html" class="dugme">Pogledaj</a>
-  </section>
-
-  <!-- ===== KONTAKT I NEWSLETTER ===== -->
-  <footer>
-    <h2>Kontakt</h2>
-    <p>📞 063 720 9751 | ✉️ sanelajovanovic90@hotmail.com</p>
-    <div class="footer-icons">
-      <a href="#" title="Facebook"><i>📘</i></a>
-      <a href="#" title="Instagram"><i>📸</i></a>
-      <a href="#" title="LinkedIn"><i>💼</i></a>
-      <a href="#" title="YouTube"><i>▶️</i></a>
+  <!-- Kontakt sekcija -->
+  <footer class="footer">
+    <div class="contact-info">
+      <h3>KONTAKT</h3>
+      <p>📞 0637209751</p>
+      <p>📧 sanelajovanovic90@hotmail.com</p>
+      <div class="social-icons">
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">LinkedIn</a>
+        <a href="#">YouTube</a>
+      </div>
     </div>
 
     <div class="newsletter">
-      <h3>Prijava na Newsletter</h3>
-      <p>Ukoliko želite da putem e-maila dobijate obaveštenja o novim blogovima, programima i besplatnom sadržaju:</p>
-      <form>
-        <input type="text" placeholder="Ime" required><br>
-        <input type="text" placeholder="Prezime" required><br>
-        <input type="email" placeholder="Email adresa" required><br>
-        <button type="submit">Prijavi se na Newsletter</button>
+      <h3>PRIJAVA NA NEWSLETTER</h3>
+      <p>Ukoliko želite da primate obaveštenja o novim blogovima, programima i besplatnim sadržajima, prijavite se putem forme ispod.</p>
+      <form class="newsletter-form">
+        <label for="ime">Ime</label>
+        <input type="text" id="ime" name="ime" required>
+
+        <label for="prezime">Prezime</label>
+        <input type="text" id="prezime" name="prezime" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <button type="submit" class="newsletter-button">PRIJAVI SE NA NEWSLETTER</button>
       </form>
     </div>
-
-    <p style="margin-top:30px;">© 2025 Sanela Jovanović | Sva prava zadržana</p>
   </footer>
 
 </body>
