Update kontakt.html with new content and links

--- a/kontakt.html
+++ b/kontakt.html
@@ -10,41 +10,32 @@
 
   <!-- Navigacija -->
   <header>
-    <h1 class="logo">Sanela Jovanović</h1>
+    <h1 class="logo">Sanela Jovanović <span>LEAN LIFE COACH</span></h1>
     <nav>
       <ul>
-        <li><a href="index.html">POČETNA</a></li>
-        <li><a href="o-meni.html">O MENI</a></li>
-        <li><a href="usluge.html">USLUGE</a></li>
-        <li><a href="blog.html">BLOG</a></li>
-        <li><a href="besplatno.html">BESPLATNO</a></li>
-        <li><a href="kontakt.html" class="active">KONTAKT</a></li>
+        <li><a href="index.html">Početna</a></li>
+        <li><a href="omeni.html">O meni</a></li>
+        <li><a href="usluge.html">Usluge</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="kontakt.html" class="active">Kontakt</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Sekcija Kontakt -->
-  <section class="kontakt-uvod">
-    <h2>KONTAKTIRAJTE ME</h2>
-    <p>Popunite formu ispod i biće mi zadovoljstvo da vam odgovorim.</p>
+  <!-- Sekcija naslov -->
+  <section class="kontakt-naslov">
+    <h2>Kontakt</h2>
   </section>
 
-  <section class="kontakt-container">
-    <div class="kontakt-info">
-      <h3>KONTAKT</h3>
-      <p>📞 0637209751</p>
-      <p>📧 sanelajovanovic90@hotmail.com</p>
-
-      <div class="socijalne-mreze">
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">LinkedIn</a>
-        <a href="#">YouTube</a>
-      </div>
+  <!-- Sekcija forma -->
+  <section class="kontakt">
+    <div class="kontakt-tekst">
+      <p>Hvala ti što si ovde!<br> 
+      Ispuni formu ispod i odgovoriću ti u najkraćem mogućem roku.</p>
     </div>
 
     <div class="kontakt-forma">
-      <form action="https://formspree.io/f/mldaddqb" method="POST">
+      <form action="https://formspree.io/f/xwpapvny" method="POST">
         <label for="ime">Ime:</label>
         <input type="text" id="ime" name="ime" required>
 
@@ -54,19 +45,18 @@
         <label for="email">Email:</label>
         <input type="email" id="email" name="_replyto" required>
 
-        <label for="poruka">Vaša poruka:</label>
-        <textarea id="poruka" name="poruka" rows="5" placeholder="Unesite svoju poruku ovde..."></textarea>
+        <label for="poruka">Poruka:</label>
+        <textarea id="poruka" name="poruka" rows="5" placeholder="Unesite svoju poruku ovde..." required></textarea>
 
         <button type="submit">POŠALJI</button>
       </form>
     </div>
   </section>
 
-  <!-- Sekcija Newsletter -->
+  <!-- Newsletter -->
   <section class="newsletter">
-    <h3>PRIJAVA NA NEWSLETTER</h3>
-    <p>Ukoliko želite da primate obaveštenja o novim blogovima, programima i besplatnim sadržajima, prijavite se putem forme ispod.</p>
-    <form action="https://formspree.io/f/mldaddqb" method="POST">
+    <h3>Prijava na newsletter</h3>
+    <form action="https://formspree.io/f/xwpapvny" method="POST">
       <label for="ime-news">Ime:</label>
       <input type="text" id="ime-news" name="ime" required>
 
@@ -80,6 +70,7 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p class="footer-copy">© 2025 Sanela Jovanović | Lean Life Coach</p>
   </footer>
