Update Facebook link to profile URL

--- a/kontakt.html
+++ b/kontakt.html
@@ -88,7 +88,7 @@
     <div class="social-links">
         <h3>Moje društvene mreže</h3>
 
-        <a href="https://facebook.com" target="_blank">Facebook</a>
+        <a href="https://www.facebook.com/profile.php?id=61583464453356" target="_blank">Facebook</a>
         <a href="https://instagram.com" target="_blank">Instagram</a>
         <a href="https://linkedin.com" target="_blank">LinkedIn</a>
         <a href="https://youtube.com" target="_blank">YouTube</a>
