--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="pocetna">
         <!-- Ubaci svoju sliku ovde -->
-        <img src="images/pocetna.jpg" alt="Sanela Jovanović">
+        <img src="pocetna.jpg" alt="Sanela Jovanović">
     </div>
 
     <div class="index-text">
